# StereoVis17s

./: .gitignore  README.md
task1/: CMakeLists.txt
task1/src/: main.cpp
task2/report/: stereovis_task2_report.aux  stereovis_task2_report.blg  stereovis_task2_report.tex
task2/src/: main.cpp
task3/src/: main.cpp
